cmake_minimum_required(VERSION 3.0.0)
project(test VERSION 0.1.0)

PROJECT(taro)

INCLUDE_DIRECTORIES(
	${PROJECT_SOURCE_DIR}/interface
	${PROJECT_SOURCE_DIR}/project
)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -Wall")
add_definitions(-Wall)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib)

# sample
ADD_SUBDIRECTORY(test/base)
