
PROJECT (sqlite)

file(GLOB SRC_CPP *.c)

IF (CMAKE_SYSTEM_NAME MATCHES "Linux")
    # shared library
    ADD_LIBRARY(sqlite SHARED ${SRC_CPP} ${SRC_H})
ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Windows")
    # static library
    ADD_LIBRARY(sqlite STATIC ${SRC_CPP} ${SRC_H})
    SET_TARGET_PROPERTIES(sqlite PROPERTIES OUTPUT_NAME "sqlite")
    SET_TARGET_PROPERTIES(sqlite PROPERTIES CLEAN_DIRECT_OUTPUT 1)
ENDIF (CMAKE_SYSTEM_NAME MATCHES "Linux")
