
PROJECT (net)

IF (CMAKE_SYSTEM_NAME MATCHES "Windows")
	file(GLOB SRC_CPP open_ssl/* windows/*)
	ADD_DEFINITIONS(-D_WINSOCK_DEPRECATED_NO_WARNINGS -DWIN32_LEAN_AND_MEAN)
ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Linux")
	file(GLOB SRC_CPP open_ssl/* linux/*)
ENDIF (CMAKE_SYSTEM_NAME MATCHES "Windows")

if(CMAKE_CL_64)
	INCLUDE_DIRECTORIES( ${OPENSSL}/Win64/include )
else(CMAKE_CL_64)
	INCLUDE_DIRECTORIES( ${OPENSSL}/Win32/include )
endif(CMAKE_CL_64)

IF (CMAKE_SYSTEM_NAME MATCHES "Linux")
	# shared library
	ADD_LIBRARY(net SHARED ${SRC_CPP} ${SRC_H})
ELSE (CMAKE_SYSTEM_NAME MATCHES "Linux")
	# static library
	ADD_LIBRARY(net_static STATIC ${SRC_CPP})
	SET_TARGET_PROPERTIES(net_static PROPERTIES OUTPUT_NAME "net")
	SET_TARGET_PROPERTIES(net_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
ENDIF (CMAKE_SYSTEM_NAME MATCHES "Linux")
